--- a/package.json
+++ b/package.json
@@ -3,12 +3,25 @@
   "ava": {
     "babel": "inherit",
     "failFast": true,
-    "files": ["test/*.js"],
-    "require": ["babel-register"],
-    "source": ["src/*.js"],
+    "files": [
+      "test/*.js"
+    ],
+    "require": [
+      "babel-register"
+    ],
+    "source": [
+      "src/*.js"
+    ],
     "verbose": true
   },
-  "browserslist": ["defaults", "Explorer >= 9", "Safari >= 6", "Opera >= 15", "iOS >= 8", "Android >= 4"],
+  "browserslist": [
+    "defaults",
+    "Explorer >= 9",
+    "Safari >= 6",
+    "Opera >= 15",
+    "iOS >= 8",
+    "Android >= 4"
+  ],
   "bugs": {
     "url": "https://github.com/planttheidea/micro-memoize/issues"
   },
@@ -29,7 +42,7 @@
     "benchmark": "^2.1.4",
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "cli-table2": "^0.2.0",
-    "eslint": "^4.16.0",
+    "eslint": "^4.17.0",
     "eslint-config-rapid7": "^2.11.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.9.0",
@@ -39,14 +52,14 @@
     "hash-it": "^3.1.2",
     "html-webpack-plugin": "^2.30.1",
     "in-publish": "^2.0.0",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.5",
     "lru-memoize": "^1.0.2",
     "memoizee": "^0.4.11",
     "memoizerific": "^1.11.2",
     "moize": "^4.0.4",
     "nyc": "^11.4.1",
     "optimize-js-plugin": "^0.0.4",
-    "ora": "^1.3.0",
+    "ora": "^1.4.0",
     "prop-types": "^15.6.0",
     "ramda": "^0.25.0",
     "react": "^16.2.0",
@@ -94,8 +107,7 @@
     "flow": "flow check src",
     "lint": "eslint --max-warnings 0 src",
     "prepublish": "if in-publish; then npm run prepublish:compile; fi",
-    "prepublish:compile":
-      "npm run lint && npm run flow && npm run test:coverage && npm run clean && npm run transpile:lib && npm run transpile:es && npm run build && npm run build:minified",
+    "prepublish:compile": "npm run lint && npm run flow && npm run test:coverage && npm run clean && npm run transpile:lib && npm run transpile:es && npm run build && npm run build:minified",
     "start": "npm run dev",
     "test": "NODE_PATH=. NODE_ENV=test ava",
     "test:coverage": "nyc --cache npm test",
