--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "ava": "^0.25.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-loader": "^7.1.2",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^7.1.3",
     "babel-plugin-syntax-flow": "^6.18.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -42,11 +42,11 @@
     "benchmark": "^2.1.4",
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "cli-table2": "^0.2.0",
-    "eslint": "^4.17.0",
+    "eslint": "^4.18.1",
     "eslint-config-rapid7": "^2.11.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.9.0",
-    "fast-equals": "^1.0.6",
+    "fast-equals": "^1.1.0",
     "fast-memoize": "^2.3.0",
     "flow-babel-webpack-plugin": "^1.1.1",
     "hash-it": "^3.1.2",
@@ -54,7 +54,7 @@
     "in-publish": "^2.0.0",
     "lodash": "^4.17.5",
     "lru-memoize": "^1.0.2",
-    "memoizee": "^0.4.11",
+    "memoizee": "^0.4.12",
     "memoizerific": "^1.11.2",
     "moize": "^4.0.4",
     "nyc": "^11.4.1",
@@ -67,10 +67,10 @@
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0-beta.14",
     "rimraf": "^2.6.2",
-    "sinon": "^4.2.2",
+    "sinon": "^4.4.2",
     "underscore": "^1.8.3",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "2.11.1"
   },
   "homepage": "https://github.com/planttheidea/micro-memoize#readme",
   "keywords": [
