--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
-    "babel-loader": "^7.1.3",
+    "babel-loader": "^7.1.4",
     "babel-plugin-syntax-flow": "^6.18.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -42,11 +42,11 @@
     "benchmark": "^2.1.4",
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "cli-table2": "^0.2.0",
-    "eslint": "^4.18.1",
+    "eslint": "^4.18.2",
     "eslint-config-rapid7": "^2.11.1",
     "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.9.0",
-    "fast-equals": "^1.1.0",
+    "eslint-loader": "^2.0.0",
+    "fast-equals": "^1.2.0",
     "fast-memoize": "^2.3.0",
     "flow-babel-webpack-plugin": "^1.1.1",
     "hash-it": "^3.1.2",
@@ -59,13 +59,13 @@
     "moize": "^4.0.4",
     "nyc": "^11.4.1",
     "optimize-js-plugin": "^0.0.4",
-    "ora": "^1.4.0",
-    "prop-types": "^15.6.0",
+    "ora": "^2.0.0",
+    "prop-types": "^15.6.1",
     "ramda": "^0.25.0",
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
-    "react-hot-loader": "^4.0.0-beta.14",
+    "react-hot-loader": "^4.0.0",
     "rimraf": "^2.6.2",
     "sinon": "^4.4.2",
     "underscore": "^1.8.3",
