Fix recursive race condition
Ensure that both key and value are calculated before populating keys / values with their value in place

--- a/package.json
+++ b/package.json
@@ -29,52 +29,52 @@
   "devDependencies": {
     "ava": "^0.25.0",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
-    "babel-loader": "^7.1.4",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
+    "babel-loader": "^7.1.5",
     "babel-plugin-syntax-flow": "^6.18.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
     "benchmark": "^2.1.4",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "cli-table2": "^0.2.0",
-    "eslint": "^4.18.2",
-    "eslint-config-rapid7": "^2.11.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^2.0.0",
-    "fast-equals": "^1.2.1",
-    "fast-memoize": "^2.3.2",
+    "eslint": "^5.3.0",
+    "eslint-config-rapid7": "^3.0.4",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^2.1.0",
+    "fast-equals": "^1.5.3",
+    "fast-memoize": "^2.5.1",
     "flow-babel-webpack-plugin": "^1.1.1",
-    "hash-it": "^3.1.2",
-    "html-webpack-plugin": "^3.0.6",
+    "hash-it": "^4.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "in-publish": "^2.0.0",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.10",
     "lru-memoize": "^1.0.2",
-    "mem": "^3.0.0",
-    "memoizee": "^0.4.12",
-    "memoizerific": "^1.11.2",
-    "nyc": "^11.6.0",
+    "mem": "^3.0.1",
+    "memoizee": "^0.4.13",
+    "memoizerific": "^1.11.3",
+    "nyc": "^12.0.2",
     "optimize-js-plugin": "^0.0.4",
-    "ora": "^2.0.0",
-    "prop-types": "^15.6.1",
+    "ora": "^3.0.0",
+    "prop-types": "^15.6.2",
     "ramda": "^0.25.0",
-    "react": "^16.2.0",
-    "react-dev-utils": "^5.0.0",
-    "react-dom": "^16.2.0",
-    "react-hot-loader": "^4.0.0",
+    "react": "^16.4.2",
+    "react-dev-utils": "^5.0.1",
+    "react-dom": "^16.4.2",
+    "react-hot-loader": "^4.3.4",
     "rimraf": "^2.6.2",
-    "rollup": "^0.56.5",
-    "rollup-plugin-babel": "^3.0.3",
-    "rollup-plugin-uglify": "^3.0.0",
-    "sinon": "^4.4.5",
-    "underscore": "^1.8.3",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.11",
-    "webpack-dev-server": "^3.1.1"
+    "rollup": "^0.63.5",
+    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-uglify": "^4.0.0",
+    "sinon": "^6.1.4",
+    "underscore": "^1.9.1",
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
   },
   "homepage": "https://github.com/planttheidea/micro-memoize#readme",
   "keywords": [
@@ -104,6 +104,7 @@
   },
   "scripts": {
     "benchmark": "npm run transpile:lib -- --no-comments && node benchmark/index.js",
+    "benchmark:trace": "npm run transpile:lib -- --no-comments && node --trace-deopt --trace-opt benchmark/trace-test.js",
     "benchmark:alternative": "npm run transpile:lib -- --no-comments && ALTERNATIVE=true node benchmark/index.js",
     "build": "NODE_ENV=production rollup -c",
     "clean": "rimraf lib && rimraf es && rimraf dist",
