--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": "rapid7/browser",
+  "extends": ["rapid7/browser"],
   "globals": {
     "__dirname": true,
     "global": true,
@@ -8,9 +8,7 @@
     "require": true
   },
   "parser": "babel-eslint",
-  "parserOptions": {
-    "ecmaVersion": 2017,
-    "sourceType": "module"
-  },
-  "rules": {}
+  "rules": {
+    "prefer-rest-params": 0
+  }
 }
