Add mjs support

--- a/package.json
+++ b/package.json
@@ -46,9 +46,10 @@
     "eslint-config-rapid7": "^3.0.4",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.0",
-    "fast-equals": "^1.5.3",
+    "fast-equals": "^1.6.0",
     "fast-memoize": "^2.5.1",
     "flow-babel-webpack-plugin": "^1.1.1",
+    "fs-extra": "^7.0.0",
     "hash-it": "^4.0.1",
     "html-webpack-plugin": "^3.2.0",
     "in-publish": "^2.0.0",
@@ -67,10 +68,10 @@
     "react-dom": "^16.4.2",
     "react-hot-loader": "^4.3.4",
     "rimraf": "^2.6.2",
-    "rollup": "^0.63.5",
+    "rollup": "^0.64.1",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-uglify": "^4.0.0",
-    "sinon": "^6.1.4",
+    "sinon": "^6.1.5",
     "underscore": "^1.9.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
@@ -107,12 +108,13 @@
     "benchmark:trace": "npm run transpile:lib -- --no-comments && node --trace-deopt --trace-opt benchmark/trace-test.js",
     "benchmark:alternative": "npm run transpile:lib -- --no-comments && ALTERNATIVE=true node benchmark/index.js",
     "build": "NODE_ENV=production rollup -c",
-    "clean": "rimraf lib && rimraf es && rimraf dist",
+    "clean": "rimraf lib && rimraf es && rimraf mjs && rimraf dist",
+    "copy:mjs": "node ./es-to-mjs.js",
     "dev": "NODE_ENV=development webpack-dev-server --progress --colors --config=webpack/webpack.config.js",
     "flow": "flow check src",
     "lint": "eslint --max-warnings 0 src",
     "prepublish": "if in-publish; then npm run prepublish:compile; fi",
-    "prepublish:compile": "npm run lint && npm run flow && npm run test:coverage && npm run clean && npm run transpile:lib && npm run transpile:es && npm run build",
+    "prepublish:compile": "npm run lint && npm run flow && npm run test:coverage && npm run clean && npm run transpile:lib && npm run transpile:es && npm run copy:mjs && npm run build",
     "start": "npm run dev",
     "test": "NODE_PATH=. NODE_ENV=test ava",
     "test:coverage": "nyc --cache npm test",
