--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   },
   "description": "A tiny, crazy fast memoization library for the 95% use-case",
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
     "@babel/plugin-syntax-flow": "^7.0.0",
     "@babel/plugin-transform-flow-strip-types": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
@@ -35,22 +35,22 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
-    "ava": "^1.0.0-beta.8",
-    "babel-eslint": "^9.0.0",
-    "babel-loader": "^8.0.0",
+    "@babel/runtime": "^7.1.2",
+    "ava": "^1.0.0-rc.1",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
     "benchmark": "^2.1.4",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "cli-table2": "^0.2.0",
-    "eslint": "^5.3.0",
+    "eslint": "^5.7.0",
     "eslint-config-rapid7": "^3.0.4",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.1.0",
-    "fast-equals": "^1.6.0",
+    "eslint-loader": "^2.1.1",
+    "fast-equals": "^1.6.1",
     "fast-memoize": "^2.5.1",
     "flow-babel-webpack-plugin": "^1.1.1",
     "fs-extra": "^7.0.0",
-    "hash-it": "^4.0.1",
+    "hash-it": "^4.0.3",
     "html-webpack-plugin": "^3.2.0",
     "in-publish": "^2.0.0",
     "lodash": "^4.17.10",
@@ -58,24 +58,24 @@
     "mem": "^4.0.0",
     "memoizee": "^0.4.13",
     "memoizerific": "^1.11.3",
-    "nyc": "^13.0.1",
+    "nyc": "^13.1.0",
     "optimize-js-plugin": "^0.0.4",
     "ora": "^3.0.0",
     "prop-types": "^15.6.2",
     "ramda": "^0.25.0",
     "react": "^16.4.2",
-    "react-dev-utils": "^5.0.1",
+    "react-dev-utils": "^6.0.5",
     "react-dom": "^16.4.2",
-    "react-hot-loader": "^4.3.4",
+    "react-hot-loader": "^4.3.11",
     "rimraf": "^2.6.2",
-    "rollup": "^0.66.0",
+    "rollup": "^0.66.6",
     "rollup-plugin-babel": "^4.0.1",
     "rollup-plugin-uglify": "^6.0.0",
-    "sinon": "^6.1.5",
+    "sinon": "^7.0.0",
     "underscore": "^1.9.1",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9"
   },
   "homepage": "https://github.com/planttheidea/micro-memoize#readme",
   "keywords": [
