--- a/package.json
+++ b/package.json
@@ -90,6 +90,8 @@
     "prepublish": "if in-publish; then npm run prepublish:compile; fi",
     "prepublish:compile": "npm run lint && npm run test:coverage && npm run dist",
     "release": "release-it",
+    "release:beta": "release-it --config=.release-it.beta.json",
+    "release:dry": "release-it --dry-run",
     "start": "npm run dev",
     "test": "NODE_PATH=. jest",
     "test:coverage": "npm run test -- --coverage",
