--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "prepublish": "if in-publish; then npm run prepublish:compile; fi",
     "prepublish:compile": "npm run lint && npm run test:coverage && npm run dist",
     "release": "release-it",
+    "release:beta": "release-it --config=.release-it.beta.json",
     "start": "npm run dev",
     "test": "NODE_PATH=. jest",
     "test:coverage": "npm run test -- --coverage",
@@ -97,5 +98,5 @@
   },
   "sideEffects": false,
   "types": "./index.d.ts",
-  "version": "4.0.1"
+  "version": "4.0.2-beta.1"
 }
