use .pop() when possible
Only use `.length = maxSize` when cache has been forcibly altered to be larger than the `maxSize`.

Also, switch from tslint to eslint.

--- a/package.json
+++ b/package.json
@@ -16,11 +16,19 @@
   "devDependencies": {
     "@types/bluebird": "^3.5.27",
     "@types/jest": "^24.0.13",
-    "@types/react": "^16.8.18",
+    "@types/react": "^16.8.19",
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "@typescript-eslint/parser": "^1.9.0",
     "benchee": "^1.1.0",
     "benchmark": "^2.1.4",
     "bluebird": "^3.5.5",
     "cli-table2": "^0.2.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
     "fast-equals": "^2.0.0",
     "fast-memoize": "^2.5.1",
     "html-webpack-plugin": "^3.2.0",
@@ -38,14 +46,12 @@
     "react": "^16.8.6",
     "rollup": "^1.12.4",
     "rollup-plugin-typescript": "^1.0.1",
-    "rollup-plugin-uglify": "^6.0.0",
+    "rollup-plugin-uglify": "^6.0.2",
     "rsvp": "^4.8.4",
     "simple-statistics": "^7.0.2",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.1",
-    "tslint": "^5.16.0",
-    "tslint-config-airbnb": "^5.11.0",
-    "tslint-loader": "^3.5.4",
+    "tslib": "^1.9.3",
     "typescript": "^3.4.5",
     "underscore": "^1.9.1",
     "webpack": "^4.32.2",
@@ -85,7 +91,7 @@
     "clean": "rimraf dist && rimraf mjs",
     "dev": "NODE_ENV=development webpack-dev-server --colors --progress --config=webpack/webpack.config.js",
     "dist": "npm run clean && npm run build && npm run build:mjs",
-    "lint": "NODE_ENV=test tslint 'src/*.ts'",
+    "lint": "NODE_ENV=test eslint src/*.ts",
     "lint:fix": "npm run lint -- --fix",
     "prepublish": "if in-publish; then npm run prepublish:compile; fi",
     "prepublish:compile": "npm run lint && npm run test:coverage && npm run dist",
