--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "no-plusplus": 0,
     "no-underscore-dangle": 0,
     "no-unused-vars": 0,
+    "operator-linebreak": 0,
     "prefer-rest-params": 0,
 
     "import/prefer-default-export": 0,
