--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "noImplicitAny": true,
     "outDir": "./dist",
     "sourceMap": true,
+    "strict": true,
     "target": "es5"
   },
   "exclude": ["node_modules"],
