--- a/.eslintrc
+++ b/.eslintrc
@@ -14,11 +14,14 @@
     "no-plusplus": 0,
     "no-underscore-dangle": 0,
     "no-unused-vars": 0,
+    "no-use-before-define": 0,
     "operator-linebreak": 0,
     "prefer-rest-params": 0,
 
+    "import/extensions": 0,
     "import/prefer-default-export": 0,
 
-    "@typescript-eslint/no-unused-vars": 2
+    "@typescript-eslint/no-unused-vars": 2,
+    "@typescript-eslint/no-use-before-define": 2
   }
 }
