--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "cli-table2": "^0.2.0",
     "eslint": "^8.14.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
+    "eslint-webpack-plugin": "^3.1.1",
     "fast-equals": "^3.0.1",
     "fast-memoize": "^2.5.2",
     "html-webpack-plugin": "^5.5.0",
@@ -87,7 +87,7 @@
     "build": "NODE_ENV=production rollup -c",
     "build:mjs": "node ./es-to-mjs.js",
     "clean": "rimraf dist && rimraf mjs",
-    "dev": "NODE_ENV=development webpack-dev-server --colors --progress --config=webpack/webpack.config.js",
+    "dev": "NODE_ENV=development webpack-dev-server --config=webpack/webpack.config.js",
     "dist": "npm run clean && npm run build && npm run build:mjs",
     "lint": "NODE_ENV=test eslint src/*.ts",
     "lint:fix": "npm run lint -- --fix",
