Add support for `noUncheckedIndexedAccess` option in tsconfig (#77)
* add support for `noUncheckedIndexedAccess` option in tsconfig

* update dependencies, and get build steps working

* get dev server working

* remove `yarn.lock` and reinstante

--- a/package.json
+++ b/package.json
@@ -14,49 +14,49 @@
   },
   "description": "A tiny, crazy fast memoization library for the 95% use-case",
   "devDependencies": {
-    "@types/bluebird": "^3.5.29",
-    "@types/jest": "^24.0.23",
-    "@types/react": "^16.9.12",
-    "@typescript-eslint/eslint-plugin": "^2.8.0",
-    "@typescript-eslint/parser": "^2.8.0",
+    "@rollup/plugin-typescript": "^8.3.2",
+    "@types/bluebird": "^3.5.36",
+    "@types/jest": "^27.4.1",
+    "@types/react": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
     "benchee": "^1.1.0",
     "benchmark": "^2.1.4",
-    "bluebird": "^3.7.1",
+    "bluebird": "^3.7.2",
     "cli-table2": "^0.2.0",
-    "eslint": "^6.7.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-loader": "^3.0.2",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.16.0",
-    "fast-equals": "^2.0.0",
-    "fast-memoize": "^2.5.1",
-    "html-webpack-plugin": "^3.2.0",
-    "in-publish": "^2.0.0",
-    "jest": "^24.9.0",
-    "lodash": "^4.17.11",
+    "eslint": "^8.14.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-webpack-plugin": "^3.1.1",
+    "fast-equals": "^3.0.1",
+    "fast-memoize": "^2.5.2",
+    "html-webpack-plugin": "^5.5.0",
+    "in-publish": "^2.0.1",
+    "jest": "^27.5.1",
+    "lodash": "^4.17.21",
     "lru-memoize": "^1.1.0",
-    "mem": "^6.0.0",
-    "memoizee": "^0.4.14",
+    "mem": "^9.0.2",
+    "memoizee": "^0.4.15",
     "memoizerific": "^1.11.3",
     "mini-bench": "^1.0.0",
-    "ora": "^4.0.3",
+    "ora": "^6.1.0",
     "performance-now": "^2.1.0",
-    "ramda": "^0.26.1",
-    "react": "^16.12.0",
-    "rollup": "^1.27.4",
-    "rollup-plugin-typescript": "^1.0.1",
-    "rollup-plugin-uglify": "^6.0.3",
-    "rsvp": "^4.8.4",
-    "simple-statistics": "^7.0.7",
-    "ts-jest": "^24.2.0",
-    "ts-loader": "^6.2.1",
-    "tslib": "^1.9.3",
-    "typescript": "^3.7.2",
-    "underscore": "^1.9.1",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "ramda": "^0.28.0",
+    "react": "^18.0.0",
+    "rollup": "^2.70.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "rsvp": "^4.8.5",
+    "simple-statistics": "^7.7.5",
+    "ts-jest": "^27.1.4",
+    "ts-loader": "^9.2.8",
+    "tslib": "^2.4.0",
+    "typescript": "^4.6.3",
+    "underscore": "^1.13.3",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   },
   "homepage": "https://github.com/planttheidea/micro-memoize#readme",
   "keywords": [
@@ -87,7 +87,7 @@
     "build": "NODE_ENV=production rollup -c",
     "build:mjs": "node ./es-to-mjs.js",
     "clean": "rimraf dist && rimraf mjs",
-    "dev": "NODE_ENV=development webpack-dev-server --colors --progress --config=webpack/webpack.config.js",
+    "dev": "NODE_ENV=development webpack-dev-server --config=webpack/webpack.config.js",
     "dist": "npm run clean && npm run build && npm run build:mjs",
     "lint": "NODE_ENV=test eslint src/*.ts",
     "lint:fix": "npm run lint -- --fix",
