--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "performance-now": "^2.1.0",
     "ramda": "^0.28.0",
     "react": "^18.0.0",
+    "release-it": "^14.14.2",
     "rollup": "^2.70.2",
     "rollup-plugin-terser": "^7.0.2",
     "rsvp": "^4.8.5",
