--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
+    "plugin:import/recommended",
     "plugin:react/recommended"
   ],
   "parser": "@typescript-eslint/parser",
