--- a/package.json
+++ b/package.json
@@ -14,27 +14,25 @@
   },
   "description": "A tiny, crazy fast memoization library for the 95% use-case",
   "devDependencies": {
-    "@rollup/plugin-typescript": "^8.3.4",
-    "@types/bluebird": "^3.5.36",
-    "@types/jest": "^28.1.6",
-    "@types/react": "^18.0.17",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
+    "@rollup/plugin-typescript": "^10.0.1",
+    "@types/bluebird": "^3.5.38",
+    "@types/jest": "^29.2.3",
+    "@types/react": "^18.0.26",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
     "benchee": "^1.1.0",
     "benchmark": "^2.1.4",
     "bluebird": "^3.7.2",
     "cli-table2": "^0.2.0",
-    "eslint": "^8.21.0",
-    "eslint-config-airbnb": "^19.0.4",
+    "eslint": "^8.29.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react": "^7.31.11",
     "eslint-webpack-plugin": "^3.2.0",
-    "fast-equals": "^4.0.1",
+    "fast-equals": "^4.0.3",
     "fast-memoize": "^2.5.2",
     "html-webpack-plugin": "^5.5.0",
     "in-publish": "^2.0.1",
-    "jest": "^28.1.3",
+    "jest": "^29.3.1",
     "lodash": "^4.17.21",
     "lru-memoize": "^1.1.0",
     "mem": "^9.0.2",
@@ -45,19 +43,19 @@
     "performance-now": "^2.1.0",
     "ramda": "^0.28.0",
     "react": "^18.2.0",
-    "release-it": "^15.3.0",
-    "rollup": "^2.77.3",
+    "release-it": "^15.5.1",
+    "rollup": "^3.5.1",
     "rollup-plugin-terser": "^7.0.2",
     "rsvp": "^4.8.5",
-    "simple-statistics": "^7.7.6",
-    "ts-jest": "^28.0.7",
-    "ts-loader": "^9.3.1",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.4",
-    "underscore": "^1.13.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.10.0"
+    "simple-statistics": "^7.8.0",
+    "ts-jest": "^29.0.3",
+    "ts-loader": "^9.4.2",
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.3",
+    "underscore": "^1.13.6",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.0",
+    "webpack-dev-server": "^4.11.1"
   },
   "homepage": "https://github.com/planttheidea/micro-memoize#readme",
   "keywords": [
@@ -85,7 +83,7 @@
   },
   "scripts": {
     "benchmark": "npm run dist && NODE_ENV=production node ./benchmarks/index.js",
-    "build": "NODE_ENV=production rollup -c",
+    "build": "NODE_ENV=production rollup -c --bundleConfigAsCjs",
     "build:mjs": "node ./es-to-mjs.js",
     "clean": "rimraf dist && rimraf mjs",
     "dev": "NODE_ENV=development webpack-dev-server --config=webpack/webpack.config.js",
