fix benchmark setup

--- a/.eslintrc
+++ b/.eslintrc
@@ -41,6 +41,7 @@
     "@typescript-eslint/no-namespace": 0,
     "@typescript-eslint/no-non-null-assertion": 0,
     "@typescript-eslint/no-unused-vars": 2,
-    "@typescript-eslint/no-use-before-define": 2
+    "@typescript-eslint/no-use-before-define": 2,
+    "@typescript-eslint/no-var-requires": 0
   }
 }
