--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "jest": "^29.3.1",
     "lodash": "^4.17.21",
     "lru-memoize": "^1.1.0",
-    "mem": "^9.0.2",
+    "mem": "^8.1.1",
     "memoizee": "^0.4.15",
     "memoizerific": "^1.11.3",
     "mini-bench": "^1.0.0",
@@ -82,7 +82,7 @@
     "url": "git+https://github.com/planttheidea/micro-memoize.git"
   },
   "scripts": {
-    "benchmark": "npm run dist && NODE_ENV=production node ./benchmarks/index.js",
+    "benchmark": "npm run dist && NODE_ENV=production node ./benchmarks/index.cjs",
     "build": "NODE_ENV=production rollup -c --bundleConfigAsCjs",
     "build:mjs": "node ./es-to-mjs.js",
     "clean": "rimraf dist && rimraf mjs",
