[Typing] Avoid publishing `src` directory (#98)
* remove internal types in favor of `index.d.ts` as the source of truth

* convert `type` to `interface` where possible, as recommended by TS guidelines for performance

* re-export in `src`, and update `DEV_ONLY`

* add `src` to `.npmignore` to avoid the files from being published

* fix build issue

* Release 4.1.0-beta.0

* oops, forgot to include the default export type

* Release 4.1.0-beta.1

* remove export from `src/index.ts`

* Release 4.1.0-beta.2

* Release 4.1.0-beta.3

* output to `*.d.mts`, as is standard for `*.mjs` files

* Release 4.1.0-beta.4

--- a/package.json
+++ b/package.json
@@ -91,15 +91,16 @@
     "lint": "NODE_ENV=test eslint src/*.ts",
     "lint:fix": "npm run lint -- --fix",
     "prepublish": "if in-publish; then npm run prepublish:compile; fi",
-    "prepublish:compile": "npm run lint && npm run test:coverage && npm run dist",
+    "prepublish:compile": "npm run typecheck && npm run lint && npm run test:coverage && npm run dist",
     "release": "release-it",
     "release:beta": "release-it --config=.release-it.beta.json",
     "start": "npm run dev",
     "test": "NODE_PATH=. jest",
     "test:coverage": "npm run test -- --coverage",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "typecheck": "tsc --noEmit"
   },
   "sideEffects": false,
   "types": "./index.d.ts",
-  "version": "4.0.15"
+  "version": "4.1.0-beta.4"
 }
