--- a/package.json
+++ b/package.json
@@ -14,48 +14,48 @@
   },
   "description": "A tiny, crazy fast memoization library for the 95% use-case",
   "devDependencies": {
-    "@rollup/plugin-typescript": "^10.0.1",
+    "@rollup/plugin-terser": "^0.4.1",
+    "@rollup/plugin-typescript": "^11.1.0",
     "@types/bluebird": "^3.5.38",
-    "@types/jest": "^29.2.3",
-    "@types/react": "^18.0.26",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
+    "@types/jest": "^29.5.1",
+    "@types/react": "^18.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
     "benchee": "^1.1.0",
     "benchmark": "^2.1.4",
     "bluebird": "^3.7.2",
     "cli-table2": "^0.2.0",
-    "eslint": "^8.29.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-react": "^7.31.11",
-    "eslint-webpack-plugin": "^3.2.0",
-    "fast-equals": "^4.0.3",
+    "eslint": "^8.40.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-webpack-plugin": "^4.0.1",
+    "fast-equals": "^5.0.1",
     "fast-memoize": "^2.5.2",
-    "html-webpack-plugin": "^5.5.0",
+    "html-webpack-plugin": "^5.5.1",
     "in-publish": "^2.0.1",
-    "jest": "^29.3.1",
+    "jest": "^29.5.0",
     "lodash": "^4.17.21",
     "lru-memoize": "^1.1.0",
-    "mem": "^8.1.1",
+    "mem": "^9.0.2",
     "memoizee": "^0.4.15",
     "memoizerific": "^1.11.3",
     "mini-bench": "^1.0.0",
-    "ora": "^6.1.2",
+    "ora": "^6.3.0",
     "performance-now": "^2.1.0",
-    "ramda": "^0.28.0",
+    "ramda": "^0.29.0",
     "react": "^18.2.0",
-    "release-it": "^15.5.1",
-    "rollup": "^3.5.1",
-    "rollup-plugin-terser": "^7.0.2",
+    "release-it": "^15.10.3",
+    "rollup": "^3.21.5",
     "rsvp": "^4.8.5",
-    "simple-statistics": "^7.8.0",
-    "ts-jest": "^29.0.3",
+    "simple-statistics": "^7.8.3",
+    "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.2",
-    "tslib": "^2.4.1",
-    "typescript": "^4.9.3",
+    "tslib": "^2.5.0",
+    "typescript": "^5.0.4",
     "underscore": "^1.13.6",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack": "^5.82.0",
+    "webpack-cli": "^5.1.0",
+    "webpack-dev-server": "^4.15.0"
   },
   "homepage": "https://github.com/planttheidea/micro-memoize#readme",
   "keywords": [
