--- a/.npmignore
+++ b/.npmignore
@@ -4,9 +4,16 @@
 .idea
 .npmignore
 .nyc_output
+__tests__
+.prettierrc.js
+.release-it*
+benchmarks
 coverage
 DEV_ONLY
+es-to-mjs.js
+jest.config.js
 node_modules
+rollup.config.js
 src
-test
+tsconfig.json
 webpack
