--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "tony.quetano@planttheidea.com",
-  "browser": "dist/micro-memoize.js",
+  "browser": "dist/umd/index.js",
   "browserslist": [
     "defaults",
     "Explorer >= 9",
@@ -57,6 +57,22 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/esm/types/index.d.ts",
+        "default": "./dist/esm/index.mjs"
+      },
+      "require": {
+        "types": "./dist/cjs/types/index.d.ts",
+        "default": "./dist/cjs/index.cjs"
+      },
+      "default": {
+        "types": "./dist/umd/types/index.d.ts",
+        "default": "./dist/umd/index.js"
+      }
+    }
+  },
   "homepage": "https://github.com/planttheidea/micro-memoize#readme",
   "keywords": [
     "memoize",
@@ -74,8 +90,8 @@
     "expire"
   ],
   "license": "MIT",
-  "main": "dist/micro-memoize.cjs.js",
-  "module": "dist/micro-memoize.esm.js",
+  "main": "dist/cjs/index.cjs",
+  "module": "dist/esm/index.mjs",
   "name": "micro-memoize",
   "repository": {
     "type": "git",
@@ -83,16 +99,17 @@
   },
   "scripts": {
     "benchmark": "npm run clean && npm run build && NODE_ENV=production node ./benchmarks/index.cjs",
-    "build": "NODE_ENV=production rollup -c --bundleConfigAsCjs",
-    "build:prev": "NODE_ENV=production rollup -c rollup-prev.config.js --bundleConfigAsCjs",
-    "build:mjs": "node ./es-to-mjs.js",
+    "build": "npm run build:esm && npm run build:cjs && npm run build:umd && npm run build:min",
+    "build:cjs": "rimraf dist/cjs && NODE_ENV=production rollup -c build/rollup/config.cjs.js && tsc -p ./build/tsconfig/cjs.json",
+    "build:esm": "rimraf dist/esm && NODE_ENV=production rollup -c build/rollup/config.esm.js && tsc -p ./build/tsconfig/esm.json",
+    "build:min": "rimraf dist/min && NODE_ENV=production rollup -c build/rollup/config.min.js && tsc -p ./build/tsconfig/min.json",
+    "build:umd": "rimraf dist/umd && NODE_ENV=production rollup -c build/rollup/config.umd.js && tsc -p ./build/tsconfig/umd.json",
     "clean": "rimraf dist && rimraf mjs",
-    "dev": "NODE_ENV=development webpack-dev-server --config=webpack/webpack.config.js",
-    "dist": "npm run clean && npm run build && npm run build:mjs",
+    "dev": "NODE_ENV=development webpack-dev-server --config=build/webpack.config.js",
     "lint": "NODE_ENV=test eslint src/*.ts",
     "lint:fix": "npm run lint -- --fix",
     "prepublish": "if in-publish; then npm run prepublish:compile; fi",
-    "prepublish:compile": "npm run typecheck && npm run lint && npm run test:coverage && npm run dist",
+    "prepublish:compile": "npm run typecheck && npm run lint && npm run test:coverage && npm run build",
     "release": "release-it",
     "release:beta": "release-it --config=.release-it.beta.json",
     "start": "npm run dev",
@@ -102,6 +119,7 @@
     "typecheck": "tsc --noEmit"
   },
   "sideEffects": false,
+  "type": "module",
   "types": "./index.d.ts",
   "version": "4.1.2"
 }
