--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,3 @@
 {
-  "compilerOptions": {
-    "allowJs": true,
-    "baseUrl": "src",
-    "esModuleInterop": true,
-    "jsx": "react",
-    "lib": ["dom", "es2015"],
-    "module": "esNext",
-    "moduleResolution": "node",
-    "noImplicitAny": true,
-    "noUncheckedIndexedAccess": true,
-    "outDir": "./dist",
-    "sourceMap": true,
-    "strict": true,
-    "target": "es5"
-  },
-  "exclude": ["node_modules"],
-  "include": ["src/*", "__tests__/*", "DEV_ONLY/*.ts"]
+  "extends": "./build/tsconfig/base.json"
 }
