--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@types/bluebird": "^3.5.42",
     "@types/jest": "^29.5.11",
     "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "benchee": "^1.1.0",
     "benchmark": "^2.1.4",
     "bluebird": "^3.7.2",
     "cli-table2": "^0.2.0",
+    "core-js":"^3.35.0",
     "eslint": "^8.56.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "^7.33.2",
@@ -44,6 +46,8 @@
     "performance-now": "^2.1.0",
     "ramda": "^0.29.1",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "regenerator-runtime": "^0.14.1",
     "release-it": "^17.0.1",
     "rollup": "^4.9.2",
     "rsvp": "^4.8.5",
