--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "benchmark": "^2.1.4",
     "bluebird": "^3.7.2",
     "cli-table2": "^0.2.0",
-    "core-js":"^3.35.0",
+    "core-js": "^3.35.0",
     "eslint": "^8.56.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "^7.33.2",
@@ -124,5 +124,5 @@
   "sideEffects": false,
   "type": "module",
   "types": "./index.d.ts",
-  "version": "4.1.2"
+  "version": "5.0.0-beta.0"
 }
