--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   "description": "A tiny, crazy fast memoization library for the 95% use-case",
   "devDependencies": {
     "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^11.1.5",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/bluebird": "^3.5.42",
     "@types/jest": "^29.5.11",
-    "@types/react": "^18.2.46",
+    "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "@typescript-eslint/parser": "^6.17.0",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
     "benchee": "^1.1.0",
     "benchmark": "^2.1.4",
     "bluebird": "^3.7.2",
@@ -34,7 +34,6 @@
     "fast-equals": "^5.0.1",
     "fast-memoize": "^2.5.2",
     "html-webpack-plugin": "^5.6.0",
-    "in-publish": "^2.0.1",
     "jest": "^29.7.0",
     "lodash": "^4.17.21",
     "lru-memoize": "^1.1.0",
@@ -49,7 +48,7 @@
     "react-dom": "^18.2.0",
     "regenerator-runtime": "^0.14.1",
     "release-it": "^17.0.1",
-    "rollup": "^4.9.2",
+    "rollup": "^4.9.5",
     "rsvp": "^4.8.5",
     "simple-statistics": "^7.8.3",
     "ts-jest": "^29.1.1",
@@ -111,8 +110,7 @@
     "dev": "NODE_ENV=development webpack-dev-server --config=build/webpack.config.js",
     "lint": "NODE_ENV=test eslint src/*.ts",
     "lint:fix": "npm run lint -- --fix",
-    "prepublish": "if in-publish; then npm run prepublish:compile; fi",
-    "prepublish:compile": "npm run typecheck && npm run lint && npm run test:coverage && npm run build",
+    "prepublishOnly": "npm run typecheck && npm run lint && npm run test:coverage && npm run build",
     "release": "release-it",
     "release:beta": "release-it --config=.release-it.beta.json",
     "start": "npm run dev",
