add cjs-specific output and types

--- a/package.json
+++ b/package.json
@@ -84,10 +84,11 @@
   "scripts": {
     "benchmark": "npm run dist && NODE_ENV=production node ./benchmarks/index.cjs",
     "build": "NODE_ENV=production rollup -c config/rollup.config.js --bundleConfigAsCjs",
-    "build:mjs": "node scripts/es-to-mjs.js",
-    "clean": "rimraf dist && rimraf mjs",
+    "build:cjs": "node scripts/create-cjs-import.js",
+    "build:mjs": "node scripts/create-mjs-import.js",
+    "clean": "rimraf dist && rimraf mjs && rimraf cjs",
     "dev": "NODE_ENV=development webpack-dev-server --config=webpack/webpack.config.js",
-    "dist": "npm run clean && npm run build && npm run build:mjs",
+    "dist": "npm run clean && npm run build && npm run build:mjs && npm run build:cjs",
     "lint": "NODE_ENV=test eslint src/*.ts",
     "lint:fix": "npm run lint -- --fix",
     "prepublish": "if in-publish; then npm run prepublish:compile; fi",
