--- a/package.json
+++ b/package.json
@@ -14,26 +14,26 @@
   },
   "description": "A tiny, crazy fast memoization library for the 95% use-case",
   "devDependencies": {
-    "@rollup/plugin-terser": "^0.4.1",
-    "@rollup/plugin-typescript": "^11.1.0",
-    "@types/bluebird": "^3.5.38",
-    "@types/jest": "^29.5.1",
-    "@types/react": "^18.2.6",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.4",
+    "@types/bluebird": "^3.5.42",
+    "@types/jest": "^30.0.0",
+    "@types/react": "^19.1.13",
+    "@typescript-eslint/eslint-plugin": "^8.44.1",
+    "@typescript-eslint/parser": "^8.44.1",
     "benchee": "^1.1.0",
     "benchmark": "^2.1.4",
     "bluebird": "^3.7.2",
     "cli-table2": "^0.2.0",
-    "eslint": "^8.40.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-webpack-plugin": "^4.0.1",
+    "eslint": "^8.57.1",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-webpack-plugin": "^4.2.0",
     "fast-equals": "^5.0.1",
     "fast-memoize": "^2.5.2",
-    "html-webpack-plugin": "^5.5.1",
+    "html-webpack-plugin": "^5.6.4",
     "in-publish": "^2.0.1",
-    "jest": "^29.5.0",
+    "jest": "^30.1.3",
     "lodash": "^4.17.21",
     "lru-memoize": "^1.1.0",
     "mem": "^8.1.1",
@@ -43,19 +43,19 @@
     "ora": "^6.3.0",
     "performance-now": "^2.1.0",
     "ramda": "^0.29.0",
-    "react": "^18.2.0",
-    "release-it": "^15.10.3",
-    "rollup": "^3.21.5",
+    "react": "^19.1.1",
+    "release-it": "^19.0.5",
+    "rollup": "^4.52.2",
     "rsvp": "^4.8.5",
-    "simple-statistics": "^7.8.3",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.2",
-    "tslib": "^2.5.0",
-    "typescript": "^5.0.4",
-    "underscore": "^1.13.6",
-    "webpack": "^5.82.0",
-    "webpack-cli": "^5.1.0",
-    "webpack-dev-server": "^4.15.0"
+    "simple-statistics": "^7.8.8",
+    "ts-jest": "^29.4.4",
+    "ts-loader": "^9.5.4",
+    "tslib": "^2.8.1",
+    "typescript": "^5.9.2",
+    "underscore": "^1.13.7",
+    "webpack": "^5.101.3",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
   },
   "homepage": "https://github.com/planttheidea/micro-memoize#readme",
   "keywords": [
@@ -88,8 +88,8 @@
     "clean": "rimraf dist && rimraf mjs",
     "dev": "NODE_ENV=development webpack-dev-server --config=webpack/webpack.config.js",
     "dist": "npm run clean && npm run build && npm run build:mjs",
-    "lint": "NODE_ENV=test eslint src/*.ts",
-    "lint:fix": "npm run lint -- --fix",
+    "lint": "ESLINT_USE_FLAT_CONFIG=false eslint src/*.ts --max-warnings 0",
+    "lint:fix": "ESLINT_USE_FLAT_CONFIG=false npm run lint -- --fix",
     "prepublish": "if in-publish; then npm run prepublish:compile; fi",
     "prepublish:compile": "npm run typecheck && npm run lint && npm run test:coverage && npm run dist",
     "release": "release-it",
