--- a/package.json
+++ b/package.json
@@ -29,20 +29,20 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-webpack-plugin": "^5.0.2",
-    "fast-equals": "^5.0.1",
+    "fast-equals": "^5.3.2",
     "fast-memoize": "^2.5.2",
     "html-webpack-plugin": "^5.6.4",
     "in-publish": "^2.0.1",
     "jest": "^30.1.3",
     "lodash": "^4.17.21",
     "lru-memoize": "^1.1.0",
-    "mem": "^8.1.1",
-    "memoizee": "^0.4.15",
+    "mem": "^10.0.0",
+    "memoizee": "^0.4.17",
     "memoizerific": "^1.11.3",
     "mini-bench": "^1.0.0",
-    "ora": "^6.3.0",
+    "ora": "^9.0.0",
     "performance-now": "^2.1.0",
-    "ramda": "^0.29.0",
+    "ramda": "^0.31.3",
     "react": "^19.1.1",
     "release-it": "^19.0.5",
     "rollup": "^4.52.2",
@@ -85,7 +85,7 @@
     "benchmark": "npm run dist && NODE_ENV=production node ./benchmarks/index.cjs",
     "build": "NODE_ENV=production rollup -c config/rollup.config.js --bundleConfigAsCjs",
     "build:mjs": "node scripts/es-to-mjs.js",
-    "clean": "rimraf dist && rimraf mjs",
+    "clean": "rm -rf dist && rm -rf mjs",
     "dev": "NODE_ENV=development webpack-dev-server --config=webpack/webpack.config.js",
     "dist": "npm run clean && npm run build && npm run build:mjs",
     "lint": "ESLINT_USE_FLAT_CONFIG=false eslint src/*.ts --max-warnings 0",
