--- a/package.json
+++ b/package.json
@@ -83,12 +83,13 @@
   },
   "scripts": {
     "benchmark": "npm run dist && NODE_ENV=production node ./benchmarks/index.cjs",
-    "build": "NODE_ENV=production rollup -c config/rollup.config.js --bundleConfigAsCjs",
+    "build": "npm run build:bundle && npm run build:mjs && npm run build:cjs",
+    "build:bundle": "NODE_ENV=production rollup -c config/rollup.config.js --bundleConfigAsCjs",
     "build:cjs": "node scripts/create-cjs-import.js",
     "build:mjs": "node scripts/create-mjs-import.js",
     "clean": "rm -rf dist && rm -rf mjs",
     "dev": "NODE_ENV=development webpack-dev-server --config=webpack/webpack.config.js",
-    "dist": "npm run clean && npm run build && npm run build:mjs",
+    "dist": "npm run clean && npm run build",
     "lint": "ESLINT_USE_FLAT_CONFIG=false eslint src/*.ts --max-warnings 0",
     "lint:fix": "ESLINT_USE_FLAT_CONFIG=false npm run lint -- --fix",
     "prepublish": "if in-publish; then npm run prepublish:compile; fi",
