rewrite with new setup, and move to vitest

--- a/config/tsconfig/tsconfig.base.json
+++ b/config/tsconfig/tsconfig.base.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "allowJs": true,
-    "baseUrl": "src",
+    "baseUrl": "../../src",
     "esModuleInterop": true,
     "jsx": "react",
     "lib": ["dom", "es2015"],
