--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.4",
     "@types/bluebird": "^3.5.42",
-    "@types/jest": "^30.0.0",
     "@types/react": "^19.1.13",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
+    "@vitest/coverage-v8": "4.0.7",
     "benchee": "^1.1.0",
     "benchmark": "^2.1.4",
     "bluebird": "^3.7.2",
@@ -33,7 +33,6 @@
     "fast-memoize": "^2.5.2",
     "html-webpack-plugin": "^5.6.4",
     "in-publish": "^2.0.1",
-    "jest": "^30.1.3",
     "lodash": "^4.17.21",
     "lru-memoize": "^1.1.0",
     "mem": "^10.0.0",
@@ -48,11 +47,12 @@
     "rollup": "^4.52.2",
     "rsvp": "^4.8.5",
     "simple-statistics": "^7.8.8",
-    "ts-jest": "^29.4.4",
     "ts-loader": "^9.5.4",
     "tslib": "^2.8.1",
     "typescript": "^5.9.2",
     "underscore": "^1.13.7",
+    "vite": "^7.2.1",
+    "vitest": "^4.0.7",
     "webpack": "^5.101.3",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
@@ -97,9 +97,9 @@
     "release": "release-it",
     "release:beta": "release-it --config=.release-it.beta.json",
     "start": "npm run dev",
-    "test": "NODE_PATH=. jest --config=config/jest.config.js",
+    "test": "vitest run --config=config/vitest.config.ts",
     "test:coverage": "npm run test -- --coverage",
-    "test:watch": "npm run test -- --watch",
+    "test:watch": "vitest --config=config/vitest.config.ts",
     "typecheck": "tsc --noEmit"
   },
   "sideEffects": false,
