clean up build setup

--- a/package.json
+++ b/package.json
@@ -73,10 +73,10 @@
   "scripts": {
     "benchmark": "npm run clean:esm && npm run build:esm && node benchmark/index.js",
     "build": "npm run clean && npm run build:esm && npm run build:cjs && npm run build:umd && npm run build:min",
-    "build:cjs": "NODE_ENV=production rollup -c config/rollup/config.cjs.js && tsc -p config/tsconfig/cjs.json && node scripts/create-cts-files.js",
-    "build:esm": "NODE_ENV=production rollup -c config/rollup/config.esm.js && tsc -p config/tsconfig/esm.json && node scripts/create-mts-files.js",
-    "build:min": "NODE_ENV=production rollup -c config/rollup/config.min.js && tsc -p config/tsconfig/min.json",
-    "build:umd": "NODE_ENV=production rollup -c config/rollup/config.umd.js && tsc -p config/tsconfig/umd.json",
+    "build:cjs": "NODE_ENV=production rollup -c config/rollup/config.cjs.js && tsc -p config/tsconfig/cjs.declarations.json && node scripts/create-cts-files.js",
+    "build:esm": "NODE_ENV=production rollup -c config/rollup/config.esm.js && tsc -p config/tsconfig/esm.declarations.json && node scripts/create-mts-files.js",
+    "build:min": "NODE_ENV=production rollup -c config/rollup/config.min.js && tsc -p config/tsconfig/min.declarations.json",
+    "build:umd": "NODE_ENV=production rollup -c config/rollup/config.umd.js && tsc -p config/tsconfig/umd.declarations.json",
     "clean": "rm -rf dist",
     "clean:cjs": "rm -rf dist/cjs",
     "clean:esm": "rm -rf dist/esm",
